{
    "name": "Controls",
    "maps": [
        {
            "name": "Play",
            "id": "01371eeb-ecc0-434c-bc95-03be9eb44a3d",
            "actions": [
                {
                    "name": "AttackL",
                    "type": "Button",
                    "id": "b91c26f5-f404-40d2-b7cc-bc8ea3d75075",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "AttackR",
                    "type": "Button",
                    "id": "0aa0e6c2-b11b-47d7-a268-b23c6e7d0851",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=1)"
                },
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "2b0923ef-997d-4591-a443-5c0b7e103264",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "SteerRight",
                    "type": "Value",
                    "id": "52bcb2aa-1a7b-4a78-b47d-4971d1ae1026",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "Press(behavior=1)"
                },
                {
                    "name": "SteerLeft",
                    "type": "Value",
                    "id": "9e1c239d-761f-403a-8d33-c5e21df2c565",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "Press(behavior=1)"
                },
                {
                    "name": "Menu",
                    "type": "Button",
                    "id": "a28b3b7d-7245-4c47-8256-f9e5c443dd22",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "20bab562-3d55-4bba-963f-276c8e3827e6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "DiveRoll",
                    "type": "Button",
                    "id": "89a12e33-4255-4110-b4eb-3a841ef4c2b8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Camera",
                    "type": "Value",
                    "id": "a0dbbbb4-2bb1-435b-87df-75b63c9ab694",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "Press(behavior=1)"
                },
                {
                    "name": "Equip",
                    "type": "Button",
                    "id": "00f4a276-b2f3-4272-b68c-49a4859dfab9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=1)"
                },
                {
                    "name": "Action",
                    "type": "Button",
                    "id": "9fcb40cd-d299-46de-b28d-f8e7d25a6b8d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=1)"
                },
                {
                    "name": "ThumbstickIn",
                    "type": "Button",
                    "id": "a1696fe5-0f5d-40e2-b879-0e7f746ca763",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=1)"
                },
                {
                    "name": "SquareInteract",
                    "type": "Button",
                    "id": "b16b08ae-6448-4c22-a15f-1c6cbf047b34",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=1)"
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "aa9cefcd-ccf1-4ea5-9b5b-7c80e45859cb",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "AttackL",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1270410f-94f6-4eee-a52e-9effbac79624",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "StickDeadzone(min=0.125,max=0.925)",
                    "groups": "Gamepad",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d88699ee-08c4-454f-95ba-7f42e386be1b",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "StickDeadzone(max=1)",
                    "groups": "Gamepad",
                    "action": "SteerRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "60766f48-17dd-4fa6-bcad-b75c47dbda49",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "StickDeadzone",
                    "groups": "Gamepad",
                    "action": "SteerLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f88596c6-9c23-4cf0-ad31-07902286c4af",
                    "path": "<Gamepad>/start",
                    "interactions": "Press(pressPoint=0.5,behavior=2)",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Menu",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c73050ec-5fe1-4599-9c46-fc6a59109d1d",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dca7471f-a659-45de-ac87-f98ffddbf7fb",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "DiveRoll",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f1217724-c7c9-445f-a01f-b5309bae1e8f",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "StickDeadzone",
                    "groups": "Gamepad",
                    "action": "Camera",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4b0404c9-1290-4719-af6d-9353cd78acb4",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "",
                    "action": "Equip",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c6ff3199-830b-4b03-85fd-fe1b8c75ba00",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "AttackR",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fd1f9261-a0ed-417d-a367-36b73c923a2f",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Action",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "61020b99-1343-41b3-90e8-3907b23cb374",
                    "path": "<Gamepad>/rightStickPress",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "ThumbstickIn",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ae47a2be-72f9-4ae3-8501-db371ecf96af",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "SquareInteract",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Menu",
            "id": "76edea5c-20e8-4567-8c01-2dfcd1ca00c4",
            "actions": [
                {
                    "name": "DpadDown",
                    "type": "Button",
                    "id": "7ad2ebdd-b9c6-47d2-9587-59302e85c710",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "DpadUp",
                    "type": "Button",
                    "id": "ffe3851f-2e45-4361-9910-eca36c430941",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Select",
                    "type": "Button",
                    "id": "be46bdc0-2cfa-4442-93eb-763ae44e11a8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "344b2cb5-1445-4748-a77f-8eb113084ffc",
                    "path": "<Gamepad>/dpad/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "DpadDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8409dcc5-0003-4029-9201-5a258cbbd920",
                    "path": "<Gamepad>/dpad/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "DpadUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d85f5534-e5dd-423d-94ce-0c3be58257bc",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Select",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "changeDimension",
            "id": "a53cb97b-86c8-499c-82ca-f88e50addc95",
            "actions": [
                {
                    "name": "Left",
                    "type": "Value",
                    "id": "91d00864-ea55-4490-94c9-8553c6b5e9d4",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Right",
                    "type": "Value",
                    "id": "4e9a6720-d004-4899-be54-49df6b7b49ec",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "384409dd-b2be-44f1-a38c-fc76628e48cc",
                    "path": "<Gamepad>/leftStick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Left",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "74824708-e7f3-4de4-9715-ae5c6f4550d5",
                    "path": "<Gamepad>/leftStick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Right",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Gamepad",
            "bindingGroup": "Gamepad",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": true,
                    "isOR": false
                }
            ]
        }
    ]
}